` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/ActivityStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title Activity State Transitions

[*] --> CREATED
CREATED --> SCHEDULE_COMMAND_CREATED: SCHEDULE
SCHEDULED_ACTIVITY_CANCEL_COMMAND_CREATED --> SCHEDULED_ACTIVITY_CANCEL_COMMAND_CREATED: REQUEST_CANCEL_ACTIVITY_TASK
SCHEDULED_ACTIVITY_CANCEL_COMMAND_CREATED --> SCHEDULED_ACTIVITY_CANCEL_EVENT_RECORDED: ACTIVITY_TASK_CANCEL_REQUESTED
SCHEDULED_ACTIVITY_CANCEL_EVENT_RECORDED --> CANCELED: ACTIVITY_TASK_CANCELED
SCHEDULED_ACTIVITY_CANCEL_EVENT_RECORDED --> STARTED_ACTIVITY_CANCEL_EVENT_RECORDED: ACTIVITY_TASK_STARTED
SCHEDULED_ACTIVITY_CANCEL_EVENT_RECORDED --> TIMED_OUT: ACTIVITY_TASK_TIMED_OUT
SCHEDULED_EVENT_RECORDED --> STARTED: ACTIVITY_TASK_STARTED
SCHEDULED_EVENT_RECORDED --> TIMED_OUT: ACTIVITY_TASK_TIMED_OUT
SCHEDULED_EVENT_RECORDED --> SCHEDULED_ACTIVITY_CANCEL_COMMAND_CREATED: CANCEL
SCHEDULE_COMMAND_CREATED --> SCHEDULE_COMMAND_CREATED: SCHEDULE_ACTIVITY_TASK
SCHEDULE_COMMAND_CREATED --> SCHEDULED_EVENT_RECORDED: ACTIVITY_TASK_SCHEDULED
SCHEDULE_COMMAND_CREATED --> CANCELED: CANCEL
STARTED --> COMPLETED: ACTIVITY_TASK_COMPLETED
STARTED --> FAILED: ACTIVITY_TASK_FAILED
STARTED --> TIMED_OUT: ACTIVITY_TASK_TIMED_OUT
STARTED --> STARTED_ACTIVITY_CANCEL_COMMAND_CREATED: CANCEL
STARTED_ACTIVITY_CANCEL_COMMAND_CREATED --> STARTED_ACTIVITY_CANCEL_COMMAND_CREATED: REQUEST_CANCEL_ACTIVITY_TASK
STARTED_ACTIVITY_CANCEL_COMMAND_CREATED --> STARTED_ACTIVITY_CANCEL_EVENT_RECORDED: ACTIVITY_TASK_CANCEL_REQUESTED
STARTED_ACTIVITY_CANCEL_EVENT_RECORDED --> FAILED: ACTIVITY_TASK_FAILED
STARTED_ACTIVITY_CANCEL_EVENT_RECORDED --> COMPLETED: ACTIVITY_TASK_COMPLETED
STARTED_ACTIVITY_CANCEL_EVENT_RECORDED --> TIMED_OUT: ACTIVITY_TASK_TIMED_OUT
STARTED_ACTIVITY_CANCEL_EVENT_RECORDED --> CANCELED: ACTIVITY_TASK_CANCELED
COMPLETED --> [*]
FAILED --> [*]
TIMED_OUT --> [*]
CANCELED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
